; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kdasm.c_get_imm_str_u.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kdasm.c_get_imm_str_u.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_imm_str_u.str = internal global [15 x i8] zeroinitializer, align 1
@.str = private unnamed_addr constant [5 x i8] c"#$%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_imm_str_u to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_imm_str_u(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = call i32 (...) @read_imm_8()
  %7 = and i32 %6, 255
  %8 = call i32 @sprintf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @get_imm_str_u.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %7)
  br label %20

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = icmp eq i32 %10, 1
  br i1 %11, label %12, label %16

12:                                               ; preds = %9
  %13 = call i32 (...) @read_imm_16()
  %14 = and i32 %13, 65535
  %15 = call i32 @sprintf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @get_imm_str_u.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %19

16:                                               ; preds = %9
  %17 = call i32 (...) @read_imm_32()
  %18 = call i32 @sprintf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @get_imm_str_u.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %16, %12
  br label %20

20:                                               ; preds = %19, %5
  ret i8* getelementptr inbounds ([15 x i8], [15 x i8]* @get_imm_str_u.str, i64 0, i64 0)
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @read_imm_8(...) #1

declare dso_local i32 @read_imm_16(...) #1

declare dso_local i32 @read_imm_32(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
